# pip-aide

./: .gitignore  LICENSE  README.md  pipai_server.py  pyproject.toml  setup.py
pip_aide/: cli.py
server/: README.md  WORKER_DEPLOYMENT.md  pip-aide_server.py  pipai_server.py  requirements.txt  worker.js  wrangler.toml
test/: direct_safety_test.py  requirements_correct.txt  requirements_dangerous.txt  requirements_incorrect.fixed.txt  requirements_incorrect.txt  requirements_malicious.txt  requirements_partial.txt  test_pip_aide.sh
